--- a/trust/static/assets/css/style.css
+++ b/trust/static/assets/css/style.css
@@ -19,6 +19,47 @@ body {
   color: #115c9b;
 }
 
+#vol-form{
+  font-weight: 600 !important;
+}
+.row{
+  font-weight: 600 !important;
+}
+
+/* footer social media */
+.social-media .fa {
+  font-size: 25px;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  margin-top: 8px;
+  padding-top: 5px;
+  background: #ce861f;
+  color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+  margin-top: 8px;
+  padding-top: 5px;
+  background: #ce861f;
+  color: white;
+}
+
+
 /* counter CSS */
 #counter{
     background-color: white;
@@ -297,13 +338,16 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
 
 .footer-icon{
   display: inline-block;
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
+    padding-top: 5px;
     background: #ce861f;
     vertical-align: middle;
     margin-right: 5px;
     color: #fff;
     text-align: center;
+    border-radius: 50%;
+
 }
 
 .FAB:hover{
