--- a/trust/templates/volunteer.html
+++ b/trust/templates/volunteer.html
@@ -99,15 +99,15 @@
 
   					<form method="POST" class="contact-form">{% csrf_token %}
 
-  						<div class="row">
+  						<div class="row" id="vol-form">
 
-          							<div class="form-group col-md-6">
+          							<div class="form-group col-md-6" >
                               <label for="name">NAME*</label>
           	                        <input type="text" name="name" class="form-control" placeholder="Name" required>
           	            </div>
 
-                        <div class="form-group col-md-6">
-                          <label for="gender">Gender*</label>
+                        <div class="form-group col-md-6 " >
+                          <label for="gender" style="font-weight=600;">Gender*</label>
                           <div class="col-sm-10">
                             <label for="male" class="radio-inline"><input type="radio" name="gender" value="male" required  id="male"> MALE </label>
                             <label for="female" class="radio-inline"><input type="radio" name="gender" value="female" required  id="female"> FEMALE </label>
