--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -35,6 +35,7 @@
 
         <!-- Template main Css -->
         <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+        <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
 
 
         <!-- Modernizr -->
@@ -117,6 +118,7 @@
                         <li class="submenu-item"><a href="{% url 'events' %}"> Project abc</a></li>
                         <li class="submenu-item"><a href="{% url 'fundraising' %}"> Project def</a></li>
                       </ul> </a> </li>
+                      <li><a href="{% url 'certificate' %}">CERTIFICATES</a></li>
                     <li><a href="{% url 'volunteer' %}">VOLUNTEER</a></li>
                     <li><a href="{% url 'contact' %}">CONTACT US</a></li>
                     </ul>
@@ -175,6 +177,8 @@
                                   </ul>
                                     <a href="#"> <span class="social-media"> <i class="fa fa-facebook"></i> </span></a>
                                     <a href="#"> <span class="social-media"> <i class="fa fa-twitter"></i> </span> </a>
+                                    <a href="#"> <span class="social-media"> <i class="fa fa-instagram"></i> </span> </a>
+                                    
                               </div>
 
                           </div>
