--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -32,7 +32,7 @@
 
             <div class="item active">
 
-              <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1537531653369-236e00309977?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="">
+              <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1504159506876-f8338247a14a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="">
 
               <div class="container">
 
@@ -105,7 +105,7 @@
 
 
     <a class="btn btn-lg FAB" href="{% url 'donate' %}">
-      Donate<br><i style="color: #1F76BD;" class="fas fa-hand-holding-heart"></i><br>Now!
+      Donate<br><i  class="fas fa-hand-holding-heart "></i><br>Now!
 
     </a>
 
