--- a/trust/static/assets/css/style.css
+++ b/trust/static/assets/css/style.css
@@ -25,6 +25,9 @@ body {
 .row{
   font-weight: 600 !important;
 }
+.fa-hand-holding-heart{
+  color:white;
+}
 
 /* footer social media */
 .social-media .fa {
@@ -53,6 +56,12 @@ body {
 
 /* Twitter */
 .fa-twitter {
+  margin-top: 8px;
+  padding-top: 5px;
+  background: #ce861f;
+  color: white;
+}
+.fa-instagram{
   margin-top: 8px;
   padding-top: 5px;
   background: #ce861f;
@@ -430,7 +439,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 1);
 }
 
 .volunteer-image{
-  height: 70%;
+  height: 30%;
   width: 40%;
 }
 
@@ -870,7 +879,7 @@ a:hover, a:focus, a:active {
 /* Pages
 ================================= */
 .page-heading {
-  background: url('../images/heading-bg.jpg?1428795369') no-repeat center;
+  background: url('https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80') no-repeat center;
   background-size: cover;
   min-height: 190px;
   color: #fff;
