--- a/trust/templates/certificate.html
+++ b/trust/templates/certificate.html
@@ -11,13 +11,14 @@
 
 		<div class="container zoomIn animated">
 
-			<h1 class="page-title">OUR PROJECTS <span class="title-under"></span></h1>
+			<h1 class="page-title">OUR CERTIFICATES <span class="title-under"></span></h1>
 			<p class="page-description">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit Necessitatibus.
 			</p>
 
 		</div>
 
+	</div>
+	<div class="gify">
     </div>
 
 
