--- a/trust/templates/volunteer.html
+++ b/trust/templates/volunteer.html
@@ -34,7 +34,7 @@
 
             <div class="item ">
 
-              <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+              <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1559633817-40d48f80e184?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="">
 
               <div class="container">
 
@@ -170,7 +170,7 @@
   					</form>
                 </section>
                 <section>
-                    <img class="volunteer-image" src="{% static 'assets/images/volunteers/volunteer.jpg' %}" alt="">
+                    <img class="volunteer-image" src="{% static 'assets\images\123.jpg' %}" alt="" >
                 </section>
   				</div>
         </div>
