404 page, uuid field for donations added

--- a/trust/templates/payment/payment_status.html
+++ b/trust/templates/payment/payment_status.html
@@ -5,6 +5,8 @@
   <p></p>
 
   <center>
+    <img src="{% static 'assets/images/loader.gif' %}" alt="">
+    
     <strong><h4 class="text-center">Please wait while your transaction is being processed...</h4></strong>
     <strong><h4 class="text-center">Please do not refresh this page.</h4></strong>
   </center>
