--- a/trust/templates/payment/paytm.html
+++ b/trust/templates/payment/paytm.html
@@ -4,8 +4,8 @@
 <section>
 
       <center>
+        <img src="{% static 'assets/images/loader.gif' %}" alt="">
          <h1>Please do not refresh this page...</h1>
-         <!-- <img src="{% static 'loader.gif' %}" alt=""> -->
       </center>
       <!-- <form method="post" action="https://securegw-stage.paytm.in/order/process" name="paytm">
          <table border="1">
