--- a/trust/templates/gallery.html
+++ b/trust/templates/gallery.html
@@ -85,7 +85,7 @@
 
                   </button>
 
-                  <a class="navbar-brand1" href="index.html"><img src="assets/images/sadaka-logo.png" alt=""></a>
+                  <!-- <a class="navbar-brand1" href="index.html"><img src="assets/images/sadaka-logo.png" alt=""></a> -->
 
                 </div>
 
