removed false fonts api, commented Our sposors

--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -16,9 +16,7 @@
         <link rel="shortcut icon" href="{% static 'assets/images/circle-cropped.png' %}" type="image/x-icon" />
 
         <!-- Fonts -->
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Dosis:400,700' rel='stylesheet' type='text/css'>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Poppins:wght@200&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 
         <!-- Bootsrap -->
         <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
@@ -178,7 +176,7 @@
                                     <a href="#"> <span class="social-media"> <i class="fa fa-facebook"></i> </span></a>
                                     <a href="#"> <span class="social-media"> <i class="fa fa-twitter"></i> </span> </a>
                                     <a href="#"> <span class="social-media"> <i class="fa fa-instagram"></i> </span> </a>
-                                    
+
                               </div>
 
                           </div>
