--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -398,7 +398,7 @@
     </section>
 
 
-    <div style="background: #dedede; padding: 30px;" class="section-home our-sponsors animate-onscroll fadeIn">
+    <!-- <div style="background: #dedede; padding: 30px;" class="section-home our-sponsors animate-onscroll fadeIn">
 
         <div class="container">
 
@@ -422,7 +422,7 @@
 
         </div>
 
-    </div> <!-- /.our-sponsors -->
+    </div> <!-- /.our-sponsors --> -->
     {% if submitted %}
         <script type="text/javascript">
           alert("Your request has been received successfully! We will get back to you as soon as possible.");
