--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -166,10 +166,10 @@
                                           </ul> -->
                                         </li>
                                         <li><a href="{% url 'project' %}"><span class="fa fa-chevron-right mr-2" style="color:#ce861f;"></span> PROJECTS</a>
-                                          <!-- <ul class="submenu">
-                                            <li class="submenu-item"><a href="{% url 'events' %}"> EVENTS</a></li>
-                                            <li class="submenu-item"><a href="{% url 'fundraising' %}"> FUND RAISING</a></li>
-                                          </ul>--> </li>
+                                          <ul class="submenu" style="list-style: none">
+                                            <li class="submenu-item" ><a href="{% url 'events' %}"><span></span> PROJECT A</a></li>
+                                            <li class="submenu-item"><a href="{% url 'fundraising' %}"> PROJECT B</a></li>
+                                          </ul> </li>
                                         <li><a href="{% url 'volunteer' %}"><span class="fa fa-chevron-right mr-2" style="color:#ce861f;"></span> VOLUNTEER</a></li>
                                         <li><a href="{% url 'contact' %}"><span class="fa fa-chevron-right mr-2" style="color:#ce861f;"></span> CONTACT US</a></li>
                                   </ul>
