--- a/trust/templates/project.html
+++ b/trust/templates/project.html
@@ -4,7 +4,7 @@
 
 
 <a class="btn btn-lg FAB" href="{% url 'donate' %}">
-  Donate<br><i style="color: #1F76BD;" class="fas fa-hand-holding-heart"></i><br>Now!
+  Donate<br><i  class="fas fa-hand-holding-heart"></i><br>Now!
 </a>
 	<div class="page-heading text-center">
 
