--- a/trust/templates/about.html
+++ b/trust/templates/about.html
@@ -109,7 +109,7 @@
 		</div> <!-- /.about-us -->
 
 		<a class="btn btn-lg FAB" href="{% url 'donate' %}">
-			Donate<br><i style="color: #1F76BD;" class="fas fa-hand-holding-heart"></i><br>Now!
+			Donate<br><i class="fas fa-hand-holding-heart"></i><br>Now!
 
 		</a>
 		<div style="background: #dedede;" class="section-home about-us fadeIn animated">
