--- a/trust/templates/certificate.html
+++ b/trust/templates/certificate.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block body_block %}
 <a class="btn btn-lg FAB" href="{% url 'donate' %}">
-  Donate<br><i style="color: #1F76BD;" class="fas fa-hand-holding-heart"></i><br>Now!
+  Donate<br><i  class="fas fa-hand-holding-heart"></i><br>Now!
 
 </a>
 
@@ -18,8 +18,10 @@
 		</div>
 
 	</div>
-	<div class="gify">
-    </div>
+	<div >
+		<img src="assets\images\building.gif" alt="">
+	</div>
+    
 
 
 {% endblock %}
