--- a/trust/templates/contact.html
+++ b/trust/templates/contact.html
@@ -3,7 +3,7 @@
 {% block body_block %}
 
 <a class="btn btn-lg FAB" href="{% url 'donate' %}">
-  Donate<br><i style="color: #1F76BD;" class="fas fa-hand-holding-heart"></i><br>Now!
+  Donate<br><i  class="fas fa-hand-holding-heart"></i><br>Now!
 
 </a>
 
