--- a/trust/templates/fundraising.html
+++ b/trust/templates/fundraising.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="{% static 'assets/css/funds.css' %}">
 
       <a class="btn btn-lg FAB" href="{% url 'donate' %}">
-        Donate<br><i style="color: #1F76BD;" class="fas fa-hand-holding-heart"></i><br>Now!
+        Donate<br><i  class="fas fa-hand-holding-heart"></i><br>Now!
 
       </a>
 
