Visit counter added, Form validations made

--- a/trust/templates/about.html
+++ b/trust/templates/about.html
@@ -91,7 +91,7 @@
 
   				</div>
 
-  				<div class="col-md-6">
+  				<div id="our-mission" class="col-md-6">
 
   					<h2 class="title-style-2">OUR MISSION <span class="title-under"></span></h2>
             <ul type="circle">
@@ -133,7 +133,7 @@
 													<p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
 
 												</div>
-												<a href="{% url 'about' %}" class="btn btn-primary"> Read more </a>
+												<a href="#our-mission" class="btn btn-primary"> Read more </a>
 
 									</div>
 
@@ -147,13 +147,13 @@
 												<div class="col-icon-wrapper">
 													<i style="color: #e8a443;" class="fas fa-piggy-bank fa-6x"></i>
 												</div>
-												<h3 class="col-title">Donations</h3>
+												<h3 class="col-title">Our aim</h3>
 												<div class="col-details">
 
 													<p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
 
 												</div>
-												<a href="{% url 'donate' %}" class="btn btn-primary"> Read more </a>
+												<a href="#content1" class="btn btn-primary"> Read more </a>
 
 									</div>
 
@@ -173,7 +173,7 @@
 													<p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
 
 												</div>
-												<a href="{% url 'contact' %}" class="btn btn-primary"> Read more </a>
+												<a href="{% url 'events' %}" class="btn btn-primary"> Read more </a>
 
 									</div>
 
