--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -39,6 +39,8 @@
         <!-- Modernizr -->
         <script src="{% static 'assets/js/modernizr-2.6.2.min.js' %}"></script>
 
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
 
 
@@ -231,10 +233,6 @@
 
       </footer>
 
-    <!-- jQuery -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="assets/js/jquery-1.11.1.min.js"><\/script>')</script>
-    </script>
 
     <!-- Bootsrap javascript file -->
     <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
@@ -246,7 +244,7 @@
     <!-- Template main javascript -->
     <script src="{% static 'assets/js/main.js' %}"></script>
 
-    <script src="{% static 'assets/js/counter.js' %}"></script>
+    <!-- <script src="{% static 'assets/js/counter.js' %}"></script> -->
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
