Fixed all the pictures and caption to it

--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -16,13 +16,13 @@
 
             <div class="item active">
 
-              <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1504159506876-f8338247a14a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="">
+              <img style="height: 620px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9021.jpg' %}" alt="">
 
               <div class="container">
 
                 <div class="carousel-caption">
 
-                  <h2 class="carousel-title bounceInDown animated slow">Because they need your help</h2>
+                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc";>Because they need your help</h2>
                   <h4 class="carousel-subtitle bounceInUp animated slow ">Do not let them down</h4>
                   <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
@@ -35,13 +35,13 @@
 
             <div class="item ">
 
-            <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1518131296958-df44106fd0ae?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="">
+            <img style="height: 660px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9016.jpg' %}" alt="">
 
               <div class="container">
 
                 <div class="carousel-caption">
 
-                  <h2 class="carousel-title bounceInDown animated slow">Together we can improve their lives</h2>
+                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc";>Together we can improve their lives</h2>
                   <h4 class="carousel-subtitle bounceInUp animated slow"> So let's do it !</h4>
                   <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated" data-toggle="modal">DONATE NOW</a>
 
@@ -56,13 +56,13 @@
 
             <div class="item ">
 
-            <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1530490125459-847a6d437825?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=763&q=80" alt="">
+            <img style="height: 620px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9026.jpg' %}" alt="">
 
               <div class="container">
 
                 <div class="carousel-caption">
 
-                  <h2 class="carousel-title bounceInDown animated slow" >A penny is a lot of money, if you have not got a penny.</h2>
+                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc"; >A penny is a lot of money, if you have not got a penny.</h2>
                   <h4 class="carousel-subtitle bounceInUp animated slow">You can make the diffrence !</h4>
                   <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
@@ -199,7 +199,7 @@
 
                     <div class="reasons-col animate-onscroll fadeIn">
 
-                        <img src="{% static 'assets/images/test-images/ben-koorengevel-sjuLxUOEMY8-unsplash.jpg' %}">
+                        <img src="{% static 'assets/images/travancore/_MG_9026.jpg' %}">
 
                         <div class="reasons-titles">
 
@@ -223,7 +223,7 @@
 
                     <div class="reasons-col animate-onscroll fadeIn">
 
-                        <img src="{% static 'assets/images/test-images/mark-chaves-9322BcAazXM-unsplash.jpg' %}" alt="">
+                        <img src="{% static 'assets/images/travancore/_MG_9021.jpg' %}" alt="">
 
                         <div class="reasons-titles">
 
@@ -262,7 +262,7 @@
 
                   <div class="reasons-col animate-onscroll fadeIn">
 
-                      <img src="{% static 'assets/images/test-images/ben-koorengevel-sjuLxUOEMY8-unsplash.jpg' %}" alt="">
+                      <img src="{% static 'assets/images/travancore/_MG_8993.jpg' %}" alt="">
 
                       <div class="reasons-titles">
 
@@ -285,7 +285,7 @@
 
                   <div class="reasons-col animate-onscroll fadeIn">
 
-                      <img src="{% static 'assets/images/test-images/mark-chaves-9322BcAazXM-unsplash.jpg' %}" alt="">
+                      <img src="{% static 'assets/images/travancore/_MG_9054.jpg' %}" alt="">
 
                       <div class="reasons-titles">
 
