--- a/trust/templates/about.html
+++ b/trust/templates/about.html
@@ -23,8 +23,8 @@
 
 				<div class="col-md-6">
 
-					<img src="{% static 'assets/images/test-images/240_F_186411793_STZlj8Cc2aqhovZJ5UTFwG2mzaZPtQeB.jpg' %}" alt="" class="img-responsive">
-
+					<!-- <img src="{% static 'assets/images/test-images/240_F_186411793_STZlj8Cc2aqhovZJ5UTFwG2mzaZPtQeB.jpg' %}" alt="" class="img-responsive"> -->
+					<img src="{% static 'assets/images/logo4.png' %}" alt="" class="img-responsive">
 				</div>
 
 				<div class="col-md-6">
