--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -23,7 +23,7 @@
                 <div class="carousel-caption">
 
                   <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc";>Because they need your help</h2>
-                  <h4 class="carousel-subtitle bounceInUp animated slow ">Do not let them down</h4>
+                  <h4 class="carousel-subtitle bounceInUp animated slow "style="background-color:#404040cc">Do not let them down</h4>
                   <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
@@ -42,7 +42,7 @@
                 <div class="carousel-caption">
 
                   <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc";>Together we can improve their lives</h2>
-                  <h4 class="carousel-subtitle bounceInUp animated slow"> So let's do it !</h4>
+                  <h4 class="carousel-subtitle bounceInUp animated slow" style="background-color:#404040cc"> So let's do it !</h4>
                   <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated" data-toggle="modal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
@@ -63,7 +63,7 @@
                 <div class="carousel-caption">
 
                   <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc"; >A penny is a lot of money, if you have not got a penny.</h2>
-                  <h4 class="carousel-subtitle bounceInUp animated slow">You can make the diffrence !</h4>
+                  <h4 class="carousel-subtitle bounceInUp animated slow"style="background-color:#404040cc">You can make the difference !</h4>
                   <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
