--- a/trust/templates/donate.html
+++ b/trust/templates/donate.html
@@ -15,14 +15,14 @@
 
             <div class="item active">
 
-              <img style="height: 520px; object-fit: cover;" src="https://images.unsplash.com/photo-1559027615-cd4628902d4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+              <img style="height: 520px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_8933.jpg' %}" alt="">
 
               <div class="container">
 
                 <div class="carousel-caption">
 
-                  <h2 class="carousel-title bounceInDown animated slow">Because they need your help</h2>
-                  <h4 class="carousel-subtitle bounceInUp animated slow ">Do not let them down</h4>
+                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc">Because they need your help</h2>
+                  <h4 class="carousel-subtitle bounceInUp animated slow " style="background-color:#404040cc">Do not let them down</h4>
                   <a href="donate.html" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
@@ -40,8 +40,8 @@
 
                 <div class="carousel-caption">
 
-                  <h2 class="carousel-title bounceInDown animated slow">Together we can improve their lives</h2>
-                  <h4 class="carousel-subtitle bounceInUp animated slow"> So let's do it !</h4>
+                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc">Together we can improve their lives</h2>
+                  <h4 class="carousel-subtitle bounceInUp animated slow" style="background-color:#404040cc"> So let's do it !</h4>
                   <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated" data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
@@ -55,14 +55,14 @@
 
             <div class="item ">
 
-              <img style="height: 520px; object-fit: cover;" src="https://images.unsplash.com/photo-1558261827-d0de98a628e8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+              <img style="height: 520px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_8985.jpg' %}" alt="">
 
               <div class="container">
 
                 <div class="carousel-caption">
 
-                  <h2 class="carousel-title bounceInDown animated slow" >A penny is a lot of money, if you have not got a penny.</h2>
-                  <h4 class="carousel-subtitle bounceInUp animated slow">You can make the diffrence !</h4>
+                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc">A penny is a lot of money, if you have not got a penny.</h2>
+                  <h4 class="carousel-subtitle bounceInUp animated slow" style="background-color:#404040cc">You can make the difference !</h4>
                   <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
