--- a/trust/templates/volunteer.html
+++ b/trust/templates/volunteer.html
@@ -39,8 +39,8 @@
 
                 <div class="carousel-caption">
 
-                  <h2 class="carousel-title bounceInDown animated slow">Together we can improve their lives</h2>
-                  <h4 class="carousel-subtitle bounceInUp animated slow"> So let's do it !</h4>
+                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#40404080">Together we can improve their lives</h2>
+                  <h4 class="carousel-subtitle bounceInUp animated slow" style="background-color:#40404080"> So let's do it !</h4>
                   <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated" data-toggle="modal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
@@ -60,8 +60,8 @@
 
                 <div class="carousel-caption">
 
-                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc" >A penny is a lot of money, if you have not got a penny.</h2>
-                  <h4 class="carousel-subtitle bounceInUp animated slow" style="background-color:#404040cc">You can make the diffrence !</h4>
+                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc">A penny is a lot of money, if you have not got a penny.</h2>
+                  <h4 class="carousel-subtitle bounceInUp animated slow" style="background-color:#40404080">You can make the difference !</h4>
                   <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
