--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -112,7 +112,7 @@
                         <h3 class="col-title">our mission</h3>
                         <div class="col-details">
 
-                          <p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
+                          <p>To provide basic necessities to people to help them as humanly possible for the less fortunate living in this world</p>
 
                         </div>
                         <a href="{% url 'about' %}" class="btn btn-primary"> Read more </a>
