--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -16,7 +16,7 @@
 
             <div class="item active">
 
-              <img style="height: 620px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9021.jpg' %}" alt="">
+              <img style="height: 620px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9021.JPG' %}" alt="">
 
               <div class="container">
 
@@ -35,7 +35,7 @@
 
             <div class="item ">
 
-            <img style="height: 660px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9016.jpg' %}" alt="">
+            <img style="height: 660px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9016.JPG' %}" alt="">
 
               <div class="container">
 
@@ -56,7 +56,7 @@
 
             <div class="item ">
 
-            <img style="height: 620px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9026.jpg' %}" alt="">
+            <img style="height: 620px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9026.JPG' %}" alt="">
 
               <div class="container">
 
@@ -200,7 +200,7 @@
 
                     <div class="reasons-col animate-onscroll fadeIn">
 
-                        <img src="{% static 'assets/images/travancore/_MG_9026.jpg' %}">
+                        <img src="{% static 'assets/images/travancore/_MG_9026.JPG' %}">
 
                         <div class="reasons-titles">
 
@@ -225,7 +225,7 @@
 
                     <div class="reasons-col animate-onscroll fadeIn">
 
-                        <img src="{% static 'assets/images/travancore/_MG_9021.jpg' %}" alt="">
+                        <img src="{% static 'assets/images/travancore/_MG_9021.JPG' %}" alt="">
 
                         <div class="reasons-titles">
 
@@ -264,7 +264,7 @@
 
                   <div class="reasons-col animate-onscroll fadeIn">
 
-                      <img src="{% static 'assets/images/travancore/_MG_8993.jpg' %}" alt="">
+                      <img src="{% static 'assets/images/travancore/_MG_8993.JPG' %}" alt="">
 
                       <div class="reasons-titles">
 
