--- a/trust/templates/volunteer.html
+++ b/trust/templates/volunteer.html
@@ -15,7 +15,7 @@
 
             <div class="item active">
 
-              <img style="height: 620px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9054.jpg' %}" alt="">
+              <img style="height: 620px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9054.JPG' %}" alt="">
               <div class="container">
 
                 <div class="carousel-caption">
@@ -54,7 +54,7 @@
 
             <div class="item ">
 
-              <img style="height: 620px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9023.jpg' %}" alt="">
+              <img style="height: 620px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_9023.JPG' %}" alt="">
 
               <div class="container">
 
