changed name of client

--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -22,7 +22,7 @@
 
                 <div class="carousel-caption">
 
-                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc";>&#8768 Your healing begins with cha&#x01A6ity &#8768</h2>
+                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc";>Your healing begins with charity</h2>
                   <h4 class="carousel-subtitle bounceInUp animated slow "style="background-color:#404040cc"></h4>
                   <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
