--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -200,7 +200,7 @@
                                 </li>
                 	                <li class="footer-li"><span class="icon footer-icon"><i class="fa fa-phone"></i></span>
                                     <span><a href="tel:+918086738848">Sajan George,&ensp;</a>
-                                      <a href="tel:+918921799665">Harikrishnan Vijayan,&ensp;</span></a>
+                                      <a href="tel:+918921799665">Harikrishna Vijayan,&ensp;</span></a>
                                       <a href="tel:+919744492745">Lijo Thomas</span></a>
                                     </li>
                 	                <li class="footer-li"><a href="mailto:thetravancorecharitabletrust@gmail.com"><span class="icon footer-icon">
