extra div removed

--- a/trust/templates/volunteer.html
+++ b/trust/templates/volunteer.html
@@ -156,7 +156,7 @@
                               <textarea name="reason" rows="5" class="form-control" placeholder="Comment" required></textarea>
                           </div>
 
-                          <div class="form-group alerts">
+                          <!-- <div class="form-group alerts">
 
                           	<div class="alert alert-success" role="alert">
 
@@ -166,13 +166,13 @@
 
   							</div>
 
-                          </div>
+                          </div> -->
 
                            <div class="form-group">
                               <button type="submit" class="btn btn-primary pull-right">Submit</button>
                           </div>
 
-                          <div class="clearfix"></div>
+                          <!-- <div class="clearfix"></div> -->
 
   					</form>
                 </section>
