--- a/trust/templates/contact.html
+++ b/trust/templates/contact.html
@@ -48,7 +48,7 @@
                             <textarea name="message" rows="5" class="form-control" placeholder="Message*" required></textarea>
                         </div>
 
-                        <div class="form-group alerts">
+                        <!-- <div class="form-group alerts">
 
                         	<div class="alert alert-success" role="alert">
 
@@ -58,13 +58,13 @@
 
 							</div>
 
-                        </div>
+                        </div> -->
 
                          <div class="form-group">
                             <button type="submit" class="btn btn-primary pull-right">Send message</button>
                         </div>
 
-                        <div class="clearfix"></div>
+                        <!-- <div class="clearfix"></div> -->
 
 					</form>
 
