image jpg to JPG done

--- a/trust/templates/donate.html
+++ b/trust/templates/donate.html
@@ -15,7 +15,7 @@
 
             <div class="item active">
 
-              <img style="height: 520px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_8933.jpg' %}" alt="">
+              <img style="height: 520px; object-fit: cover;" src="{% static 'assets/images/travancore/_MG_8933.JPG' %}" alt="">
 
               <div class="container">
 
