--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -287,7 +287,7 @@
 
                   <div class="reasons-col animate-onscroll fadeIn">
 
-                      <img src="{% static 'assets/images/travancore/_MG_9054.jpg' %}" alt="">
+                      <img src="{% static 'assets/images/travancore/_MG_9054.JPG' %}" alt="">
 
                       <div class="reasons-titles">
 
